whitespace bugs fixed

--- a/src/css/media-queries/_media-queries.scss
+++ b/src/css/media-queries/_media-queries.scss
@@ -3,6 +3,10 @@
     height: 100%;
     width: 100%;
 
+    @media(min-width: 500px) {        
+        width: 500px;
+    }
+
     @media(min-width: 605px) {
          width: 768px; 
     }
